--- a/templates/projects.html
+++ b/templates/projects.html
@@ -95,8 +95,8 @@
                             A personal resume portfolio showcasing my skills, experience, and projects. Designed to create a strong first impression and provide easy navigation for recruiters.
                         </p>
                         <div class="mt-auto">
-                            <a href="https://github.com/pravallika-0201/resume-portfolio" target="_blank"
-                                class="btn btn-primary w-100">View on GitHub</a>
+                            <a href="https://resume-portfolio-py78.onrender.com" target="_blank"
+                                class="btn btn-primary w-100">Visit the web page</a>
                         </div>
                     </div>
                 </div>
