--- a/templates/bootstrapdemo.html
+++ b/templates/bootstrapdemo.html
@@ -1,60 +1,350 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+    <link
+    href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
+    rel="stylesheet"
+/>
     <style>
       .navbar-nav {
         gap: 30px;
       }
+      
+      
+      #about_me>a:hover{
+        transform: scale(1.2);
+      }
+      .card>img{
+        height: 300px;
+        
+      }
+      span{
+        color: orangered;
+      }
+      .skill{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        
+      }
+      .skill>h2{
+        padding-left: 100px;
+      }
+      .card{
+        margin: 50px;
+      }
+      a{
+        text-decoration: none;
+      }
+
       </style>
       
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid ">
-          <a class="navbar-brand" href="#" >Portfolio</a>
+          <a class="navbar-brand" href="#" ><h1>Portfolio</h1></a>
           
 
           <div  id="navbarNav" >
             
             <ul class="nav nav-underline">
               <li class="nav-item">
-                <a class="nav-link "  href="#">Home</a>
+                <a class="nav-link "  href="#" style="color: white;">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#about">About</a>
+                <a class="nav-link" href="#about" style="color: white;">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="portfolio">Portfolio</a>
+                <a class="nav-link" href="#skills" style="color: white;">Skills</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link " >Contact</a>
+                <a class="nav-link" href="#projects" style="color: white;">Projects</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#certifications" style="color: white;">Certifications</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link " href="#contact" style="color: white;">Contact</a>
               </li>
             </ul>
           </div>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" >
             <span class="navbar-toggler-icon "></span>
           </button>
-          
+          </div>
       </nav>
-      <div class="row g-0 bg-body-secondary position-relative " name="about">
-
-        <div class="col-md-6 mb-md-0 p-md-4">
-          <img src="/static/images/hero.jpg" class="w-100" alt="...">
+      <div class="row g-0 bg-body-danger position-relative " id="about" style="padding: 100px;" >
+        <div class="col-md-6 p-4 ps-md-0" id="about_me" >
+          <h1 class="mt-0" style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: 70px;">I'm Pravallika</h1>
+          <p>Hi, I’m Pravallika Goli, a B.Tech student specializing in the stream of computer science with a strong focus on web development. I have experience working with frontend and backend technologies like HTML, CSS, JavaScript, Python, and MySQL. Currently, I’m enhancing my full stack development skills at JSpiders, Hyderabad. I’m passionate about creating responsive, user-friendly web applications and continuously improving my technical abilities.</p>
+          <a href="https://www.instagram.com/pravallikaammu01/"><i class="ri-instagram-line" style="color: white"></i></a>
+          <a href="#"><i class="ri-whatsapp-line" style="color: white"></i></a>
+          <a href="www.linkedin.com/in/pravallika-goli-a6865b253"><i class="ri-linkedin-box-fill" style="color: white;"></i></a>
+          <a href="https://github.com/pravallika-0201"><i class="ri-github-fill" style="color: white;"></i></a>
+          <button style="height: auto; width: auto ; background-color: rgb(222, 5, 5);border-radius: 10px; "><a href="https://drive.google.com/file/d/1wUS_lJh9i9yLFUCxo1k0wZkp36zTlnTW/view?usp=drive_link" ><h3 style="color: white;">Resume</h3></a></button>
         </div>
-        <div class="col-md-6 p-4 ps-md-0">
-          <h5 class="mt-0">Columns with stretched link</h5>
-          <p>Another instance of placeholder content for this other custom component. It is intended to mimic what some real-world content would look like, and we're using it here to give the component a bit of body and size.</p>
-          <a href="#" class="stretched-link">Go somewhere</a>
+        <div class="col-md-6 mb-md-0 p-md-4" >
+          <img src="https://files.idyllic.app/files/static/3782019"  alt="..." style="height: 300px; border-radius: 200px;">
         </div>
+        
       </div>
+      <!-- Nav tabs -->
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.min.js" integrity="sha384-VQqxDN0EQCkWoxt/0vsQvZswzTHUVOImccYmSyhJTp7kGtPed0Qcx8rK9h9YEgx+" crossorigin="anonymous"></script>
+    <div class="card mb-3" id="about" style="margin: 10px;">
+      <div class="row g-0">
+        <div class="col-md-4" style="height: 500px;">
+          <img src="/static/images/pic.jpg" class="img-fluid rounded-start" alt="..." style="height: 500px;">
+        </div>
+        <div class="col-md-8">
+          <div class="card-body">
+              <ul class="nav nav-underline nav-fill" id="myTab" role="tablist">
+              <li class="nav-item" role="presentation">
+                <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true">Intro</button>
+              </li>
+              <li class="nav-item" role="presentation">
+                <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile-tab-pane" type="button" role="tab" aria-controls="profile-tab-pane" aria-selected="false">Experience</button>
+              </li>
+              <li class="nav-item" role="presentation">
+                <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact-tab-pane" type="button" role="tab" aria-controls="contact-tab-pane" aria-selected="false">Education</button>
+              </li>
+              
+            </ul>
+
+          <div class="tab-content" id="myTabContent">
+            <div class="tab-pane fade show active" id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab" tabindex="0" style="line-height: 2;padding: 40px;">Hello, my name is Pravallika Goli. I’m a final-year B.Tech student specializing in Data Science at Amrita Sai Institute of Science and Technology, with a current CGPA of 8.26.
+
+          As part of my academic journey, I led a team project titled "Smart Health Prediction Using Data Mining", where we developed a web application to predict diseases using machine learning algorithms like KNN and TF-IDF. The system achieved over 85% accuracy and included user authentication, symptom checker, and admin management modules, using technologies such as PHP, MySQL, HTML, CSS, and Bootstrap.
+
+          Additionally, I created a static Amazon clone using HTML and CSS to practice frontend development and designed a personal Resume Portfolio website to showcase my skills and projects.
+
+          To strengthen my technical skills further, I’m currently undergoing full stack development training at JSpiders, Hyderabad, where I'm enhancing my proficiency in Java, SQL, web technologies, and project building.
+
+          I’m a quick learner, passionate about solving real-world problems through technology, and actively looking for opportunities to apply my skills in a professional environment.</div>
+
+          <div class="tab-pane fade" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0"style="padding:40px;">I interned at Spypro Security Solutions Pvt. Ltd. from October 2023 to December 2023, where I led a project focused on predictive modeling for medal outcomes using data science techniques. My responsibilities included collecting and preprocessing sports-related datasets, applying machine learning algorithms to predict medal results, and evaluating model performance for accuracy and reliability. I collaborated with cross-functional teams to integrate data-driven insights into strategic decision-making and presented findings through clear visualizations and reports. This experience enhanced my skills in Python, data analysis, model optimization, and real-time application of predictive analytics.</div>
+          <div class="tab-pane fade" id="contact-tab-pane" role="tabpanel" aria-labelledby="contact-tab" tabindex="0">
+            <table class="table table-hover">
+  
+ 
+            <tbody>
+              <tr>
+                
+                <td>Computer Science and Engineering (Data Science) in B.Tech,</td>
+                <td>Amrita Sai Institute of Science And Technology</td>
+                <td>2021-2025 <br> CGPA : 8.26</td>
+
+              </tr>
+              <tr>
+                
+                <td>Intermediate(M.P.C),Board of Intermediate Education Andhra Pradesh</td>
+                <td>V J Junior College</td>
+                <td>2019-1021 <br> Marks 938/1000</td>
+              </tr>
+              <tr>
+                
+                <td>Sri N V S Vidyanikethan</td>
+                <td>SSC, Board of Secondary Education</td>
+                <td >2018-2019 <br> GPA : 9.2</td>
+              </tr>
+            </tbody>
+
+          </table></div>
+  
+
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+
+<div class="card mb-3" id="about" style="margin: 100px;">
+  <div class="row g-0">
+    
+    <div class="col-md-8">
+      <div class="card-body">
+        <h5 class="card-title" style="font-size:60px;">Why Me?</h5>
+        <p class="card-text" style="font-size:40px;">I help You to make beautiful websites</p>
+        <p class="card-text"><small class="text-body-secondary">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores facere sequi ipsum pariatur id porro, cum numquam accusantium quo cumque odio quos architecto nemo voluptatum autem, voluptatem consequatur placeat ab!</small></p>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <table class="table">
+  
+    <tr style="height: 100px;">
+      <td scope="col"><span>>></span>Web Design</td>
+      <td scope="col"><span>>></span>user Experience</td>
+      
+    </tr>
+  
+  
+    <tr style="height: 100px;">
+      <td scope="col"><span>>></span>Front-end Development</td>
+      <td scope="col"><span>>></span>Back-end Development</td>
+    </tr>
+    <tr style="height: 100px;">
+      <td scope="col"><span>>></span>Wordpress Website</td>
+      <td scope="col"><span>>></span>Responsive</td>
+    </tr>
+    <tr>
+      
+    </tr>
+ 
+</table>
+    </div>
+  </div>
+</div>
+<center><h1>Skills</h1></center>
+<div class="skill" id="skills" style="padding: 100px;">
+  <h2>Java</h1>
+  <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+  <div class="progress-bar bg-danger" style="width: 75%">75%</div>
+</div>
+<h2>python</h1>
+<div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+  <div class="progress-bar bg-danger" style="width: 65%">65%</div>
+</div>
+<h2>MySQL</h1>
+<div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+  <div class="progress-bar bg-danger" style="width: 75%">75%</div>
+</div>
+<h2>HTML</h2>
+<div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+  <div class="progress-bar bg-danger" style="width: 75%">75%</div>
+</div>
+<h2>css</h1>
+<div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+  <div class="progress-bar bg-danger" style="width: 70%">70%</div>
+</div>
+<h2>Javascript</h1>
+<div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+  <div class="progress-bar bg-danger" style="width: 60%">60%</div>
+</div>
+<h2>Bootstrap</h1>
+<div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+  <div class="progress-bar bg-danger" style="width: 70%">70%</div>
+</div>
+ 
+</div>
+
+<br>
+
+<center><h1 id="projects">Projects</h1></center>
+
+
+
+<div class="card-group">
+  <div class="card">
+    <img src="https://d3nwecxvwq3b5n.cloudfront.net/AcuCustom/Sitename/DAM/040/iStock-1477437266.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Academic Project</h5>
+      <p class="card-text">I led a team project on Smart health prediction using data mining . In this project we used machine learning algorithm,data mining techniques forHTML,CSS,Bootstrap for front-end development and php, Mysql for Back-end development. </p>
+    
+    </div>
+    <div class="card-footer">
+       <a href="#" class="card-link">Card link</a>
+    <a href="#" class="card-link">Another link</a>
+    </div>
+  </div>
+  <div class="card">
+    <img src="/static/images/amazon.png" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Amazon Clone</h5>
+      <p class="card-text">Created an amazon home page clone using HTML,CSS.</p>
+    </div>
+    <div class="card-footer">
+      <a href="#" class="card-link">Card link</a>
+    <a href="#" class="card-link">Another link</a>
+    </div>
+  </div>
+  <div class="card">
+    <img src="/static/images/portfolio.png" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Resume Portfolio</h5>
+      <p class="card-text">Created a resume portfolio using HTML,CSS,Bootstrap,python,flask and deployed using render.</p>
+    </div>
+    <div class="card-footer">
+       <a href="#" class="card-link">Card link</a>
+    <a href="#" class="card-link">Another link</a>
+    </div>
+  </div>
+</div>
+
+<br>
+<center><h1 id="certifications">Certifications</h1></center>
+<div id="carouselExampleIndicators" class="carousel slide" style="height: 500px;width: 500px;margin: auto;">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 6"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="/static/images/Coursera 2RM2CZX7KF01_page-0001.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="/static/images/Coursera KZ6DGTPEHWMT_page-0001.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="/static/images/IBM DB0101EN Certificate _ CognitiveClass_page-0001.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="/static/images/simplilearn python_page-0001.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="/static/images/G.PRAVALLIKA.png" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="/static/images/hzmoNKtzvAzXsEqx8_Accenture North America_AqkocbBsPGMKnWxMp_1715775895228_completion_certificate_page-0001.jpg" class="d-block w-100" alt="...">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+<br>
+<div class="card" >
+  <div class="card-body">
+    <h1 class="card-title">Let's Make Great Things Together</h1>
+    <h6 class="card-subtitle mb-2 text-body-secondary">I'd love to hear about your project at </h6>
+    <a href="#" class="card-link">golipravallika6@gmail.com.com</a>
+    
+  </div>
+ <form>
+  
+  <div class="mb-3 form-check" id="contact">
+    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Name" style="border: none;border-bottom: 2px solid grey; border-radius: 1px; padding: 20px;">
+  </div>
+  <div class="mb-3 form-check" >
+    
+    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email" style="border: none;border-bottom: 2px solid grey; border-radius: 1px; padding: 20px;">
+    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+  </div>
+  <div class="mb-3 form-check">
+    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="your Message" style="border: none;border-bottom: 2px solid grey; border-radius: 1px; padding: 20px;"></textarea>
+  </div>
+  <button type="submit" class="btn btn-danger mb-3" style="border-radius: 1px; width: 8rem; height: 4rem; font-size: 20px; color: black; font-weight: 30px; margin: 30px;">Submit</button>
+</form>
+</div>
+<footer>
+  <div class="footer" style="position: absolute; left: 700px;">
+    <p>copyright @2025 Pravallika</p>
+  </div>
+</footer>
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
 </body>
 </html>
