--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -39,7 +39,32 @@
       a{
         text-decoration: none;
       }
-
+      #carouselExampleIndicators{
+        height: 500px;
+        width: 500px;
+      }
+      @media screen and (max-width:500px) {
+        .skill{
+          display: grid;
+          grid-template-columns: 1fr;
+        }
+      }
+      @media screen and (max-width:500px){
+        .carouselExampleIndicators{
+          width: 300px;
+          height: 300px;
+        }
+        .carousel-item img{
+          width: 300px;
+          height: 300px;
+        }
+      }
+      @media screen and (max-width:300px){
+        .contact{
+          width: 300px;
+          height: 300px;
+        }
+      }
       </style>
       
   </head>
@@ -77,7 +102,7 @@
           </button>
           </div>
       </nav>
-      <div class="row g-0 bg-body-danger position-relative " id="about" style="padding: 100px;" >
+      <div class="row g-0 bg-body-danger position-relative " id="about"  >
         <div class="col-md-6 p-4 ps-md-0" id="about_me" >
           <h1 class="mt-0" style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: 70px;">I'm Pravallika</h1>
           <p>Hi, I’m Pravallika Goli, a B.Tech student specializing in the stream of computer science with a strong focus on web development. I have experience working with frontend and backend technologies like HTML, CSS, JavaScript, Python, and MySQL. Currently, I’m enhancing my full stack development skills at JSpiders, Hyderabad. I’m passionate about creating responsive, user-friendly web applications and continuously improving my technical abilities.</p>
@@ -92,6 +117,7 @@
         </div>
         
       </div>
+      
       <!-- Nav tabs -->
 
 
@@ -162,7 +188,7 @@
 </div>
 </div>
 
-<div class="card mb-3" id="about" style="margin: 100px;">
+<div class="card mb-3" id="about" >
   <div class="row g-0">
     
     <div class="col-md-8">
@@ -245,10 +271,7 @@
       <p class="card-text">I led a team project on Smart health prediction using data mining . In this project we used machine learning algorithm,data mining techniques forHTML,CSS,Bootstrap for front-end development and php, Mysql for Back-end development. </p>
     
     </div>
-    <div class="card-footer">
-       <a href="#" class="card-link">link</a>
-    <a href="#" class="card-link">Another link</a>
-    </div>
+    
   </div>
   <div class="card">
     <img src="/static/images/amazon.png" class="card-img-top" alt="...">
@@ -276,7 +299,7 @@
 
 <br>
 <center><h1 id="certifications">Certifications</h1></center>
-<div id="carouselExampleIndicators" class="carousel slide" style="height: 500px;width: 500px;margin: auto;">
+<div id="carouselExampleIndicators" class="carousel slide" style="margin: auto;">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -338,8 +361,9 @@
   <button type="submit" class="btn btn-danger mb-3" style="border-radius: 1px; width: 8rem; height: 4rem; font-size: 20px; color: black; font-weight: 30px; margin: 30px;">Submit</button>
 </form>
 </div>
+<hr>
 <footer>
-  <div class="footer" style="position: absolute; left: 700px;">
+  <div class="footer" style=" height: 100px;text-align: center;padding-top: 30px;">
     <p>Developed By Pravallika @ 2025</p>
   </div>
 </footer>
