--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -15,7 +15,8 @@
       }
       
       #home{
-        height: 500px;
+        height: 700px;
+        font-style: italic;
       }
       #about_me>a:hover{
         transform: scale(1.2);
