--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -121,7 +121,7 @@
                 <a href="#"><i class="ri-whatsapp-line" style="color: white"></i></a>
                 <a href="www.linkedin.com/in/pravallika-goli-a6865b253"><i class="ri-linkedin-box-fill" style="color: white;"></i></a>
                 <a href="https://github.com/pravallika-0201"><i class="ri-github-fill" style="color: white;"></i></a>
-                <button style="height: auto; width: auto ; background-color: rgb(222, 5, 5);border-radius: 10px; "><a href="https://drive.google.com/file/d/1wUS_lJh9i9yLFUCxo1k0wZkp36zTlnTW/view?usp=drive_link" ><h3 style="color: white;">Resume</h3></a></button>
+                <button style="height: auto; width: auto ; background-color: rgb(222, 5, 5);border-radius: 10px; "><a href="https://drive.google.com/file/d/1wUS_lJh9i9yLFUCxo1k0wZkp36zTlnTW/view?usp=sharing" ><h3 style="color: white;">Resume</h3></a></button>
             </div>
           </div>
           <div class="col-md-4" style="margin: auto;">
